reduce the font-size to 90% and make sure that we pre-wrap the pre elements, as well as the code blocks
git-svn-id: http://svn.osqa.net/svnroot/osqa/trunk@1025 0cfe37f9-358a-4d5e-be75-b63607b5c754

--- a/forum/skins/default/media/style/style.css
+++ b/forum/skins/default/media/style/style.css
@@ -128,17 +128,18 @@ li input {
 pre {
     background-color: #F5F5F5;
     font-family: Consolas, Monaco, Liberation Mono, Lucida Console, Monospace;
-    font-size: 100%;
+    font-size: 90%;
     margin-bottom: 10px;
     overflow: auto;
     padding-left: 5px;
     padding-top: 5px;
     width: 580px;
+    white-space: pre-wrap;
 }
 
 code {
     font-family: Consolas, Monaco, Liberation Mono, Lucida Console, Monospace;
-    font-size: 100%;
+    font-size: 90%;
     white-space: pre-wrap;
 }
 
